--- a/CuidooApp/Storyboards/Bio.storyboard
+++ b/CuidooApp/Storyboards/Bio.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BQs-6l-7Co">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tTE-aN-wWd">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
@@ -7,20 +7,168 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="gp4-Ak-48H">
+        <!--Bio Table View Controller-->
+        <scene sceneID="R6s-3e-TEl">
             <objects>
-                <viewController id="BQs-6l-7Co" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="EmO-AR-f4j">
+                <tableViewController id="tTE-aN-wWd" customClass="BioTableViewController" customModule="CuidooApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="8lV-PA-mLh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="LZj-Td-oJz"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IZF-Bv-Vf0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <sections>
+                            <tableViewSection id="qVf-Wu-dsD">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="214" id="FN6-rI-Mbn">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="214"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FN6-rI-Mbn" id="r7R-sQ-eYD">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="214"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7A1-2Z-bcI">
+                                                    <rect key="frame" x="20" y="183" width="374" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mom" translatesAutoresizingMaskIntoConstraints="NO" id="WB0-5y-9Bj">
+                                                    <rect key="frame" x="142" y="28" width="130" height="129"/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="WB0-5y-9Bj" secondAttribute="height" multiplier="132:131" id="6HS-zR-u63"/>
+                                                        <constraint firstAttribute="height" constant="129" id="j3f-Ku-EVo"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="WB0-5y-9Bj" firstAttribute="top" secondItem="r7R-sQ-eYD" secondAttribute="top" constant="28" id="30P-mC-It4"/>
+                                                <constraint firstAttribute="trailing" secondItem="7A1-2Z-bcI" secondAttribute="trailing" constant="20" id="7CH-TF-PX5"/>
+                                                <constraint firstItem="WB0-5y-9Bj" firstAttribute="centerX" secondItem="r7R-sQ-eYD" secondAttribute="centerX" id="AW7-jh-ptg"/>
+                                                <constraint firstItem="7A1-2Z-bcI" firstAttribute="width" secondItem="r7R-sQ-eYD" secondAttribute="width" multiplier="0.903382" id="RQL-fd-N46"/>
+                                                <constraint firstAttribute="bottom" secondItem="7A1-2Z-bcI" secondAttribute="bottom" constant="26" id="eJl-jl-3OR"/>
+                                                <constraint firstItem="7A1-2Z-bcI" firstAttribute="leading" secondItem="r7R-sQ-eYD" secondAttribute="leading" constant="20" id="rvX-Hl-4VH"/>
+                                                <constraint firstItem="7A1-2Z-bcI" firstAttribute="top" secondItem="WB0-5y-9Bj" secondAttribute="bottom" constant="26" id="xVz-td-MSp"/>
+                                                <constraint firstItem="7A1-2Z-bcI" firstAttribute="height" secondItem="r7R-sQ-eYD" secondAttribute="height" multiplier="0.0985915" id="zwc-DL-ufT"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="155" id="hg4-P9-jOd">
+                                        <rect key="frame" x="0.0" y="242" width="414" height="155"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hg4-P9-jOd" id="c8G-sV-bVQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="155"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SOBRE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUd-89-gtQ">
+                                                    <rect key="frame" x="164" y="23" width="86" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="12" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iCo-yR-mVm">
+                                                    <rect key="frame" x="39" y="51.5" width="338" height="106.5"/>
+                                                    <string key="text">Formada em engenharia, trabalho com manutenção e serviços gerais. Sou mãe da Duda e da Pietra e uso o Cuidoo para conciliar trabalho e filhas.
+</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="yUd-89-gtQ" firstAttribute="top" secondItem="c8G-sV-bVQ" secondAttribute="topMargin" constant="12" id="20W-Qp-cUH"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="yUd-89-gtQ" secondAttribute="trailing" constant="144" id="8kM-M1-wXg"/>
+                                                <constraint firstItem="iCo-yR-mVm" firstAttribute="top" secondItem="yUd-89-gtQ" secondAttribute="bottom" constant="9" id="Agi-Tq-aEV">
+                                                    <string key="userLabel">Formada em engenharia, trabalho com manutenção e serviços gerais. Sou mãe da Duda e da Pietra e uso o Cuidoo para conciliar trabalho e filhas. .top = SOBRE.bottom + 9</string>
+                                                </constraint>
+                                                <constraint firstItem="iCo-yR-mVm" firstAttribute="bottom" secondItem="c8G-sV-bVQ" secondAttribute="bottomMargin" constant="14" id="Hma-0m-icI"/>
+                                                <constraint firstItem="iCo-yR-mVm" firstAttribute="leading" secondItem="c8G-sV-bVQ" secondAttribute="leadingMargin" constant="19" id="a7t-fZ-m9z"/>
+                                                <constraint firstItem="yUd-89-gtQ" firstAttribute="leading" secondItem="c8G-sV-bVQ" secondAttribute="leadingMargin" constant="144" id="hPX-e2-XiS"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="iCo-yR-mVm" secondAttribute="trailing" constant="17" id="sDF-NP-RXI"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="tTE-aN-wWd" id="wg8-N8-RtZ"/>
+                            <outlet property="delegate" destination="tTE-aN-wWd" id="IzE-OS-795"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="nMa-cY-d1E">
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="uq2-UD-Sfy">
+                            <connections>
+                                <segue destination="JBN-1C-FpK" kind="presentation" id="0oE-51-OMq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="bioLabel" destination="iCo-yR-mVm" id="yfX-lE-l9D"/>
+                        <outlet property="nameMomLabel" destination="7A1-2Z-bcI" id="sI5-bG-dcq"/>
+                        <outlet property="profilePic" destination="WB0-5y-9Bj" id="5Uk-dw-mXt"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oqg-lV-DM2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-213" y="67"/>
+            <point key="canvasLocation" x="1571.0144927536232" y="66.964285714285708"/>
+        </scene>
+        <!--Sobre-->
+        <scene sceneID="gGH-dP-7qd">
+            <objects>
+                <viewController interfaceStyle="light" id="JBN-1C-FpK" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yAs-Q1-aIB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Escreva um pouco sobre você" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WaX-dN-wUI">
+                                <rect key="frame" x="17" y="65" width="380" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="Evd-hw-QmF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WsU-sg-xxg">
+                                <rect key="frame" x="17" y="273" width="380" height="1"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="380" id="gqW-SS-fhY"/>
+                                    <constraint firstAttribute="height" constant="1" id="tzN-Wx-rJt"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000/340" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wsI-c5-6dj">
+                                <rect key="frame" x="294" y="282" width="103" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="WaX-dN-wUI" firstAttribute="leading" secondItem="Vca-3B-E0P" secondAttribute="leading" constant="17" id="5hv-xd-nH4"/>
+                            <constraint firstItem="Vca-3B-E0P" firstAttribute="trailing" secondItem="wsI-c5-6dj" secondAttribute="trailing" constant="17" id="7Dw-Ze-zcO"/>
+                            <constraint firstItem="wsI-c5-6dj" firstAttribute="leading" secondItem="Vca-3B-E0P" secondAttribute="leading" constant="294" id="PQC-h5-eZx"/>
+                            <constraint firstItem="Vca-3B-E0P" firstAttribute="trailing" secondItem="WaX-dN-wUI" secondAttribute="trailing" constant="17" id="PhK-by-2Cs"/>
+                            <constraint firstItem="WsU-sg-xxg" firstAttribute="leading" secondItem="yAs-Q1-aIB" secondAttribute="leading" constant="17" id="SBZ-gW-rKG"/>
+                            <constraint firstItem="WsU-sg-xxg" firstAttribute="top" secondItem="WaX-dN-wUI" secondAttribute="bottom" constant="8" id="TeT-al-x3g"/>
+                            <constraint firstItem="WaX-dN-wUI" firstAttribute="top" secondItem="Vca-3B-E0P" secondAttribute="top" constant="9" id="Ymm-lZ-xWZ"/>
+                            <constraint firstAttribute="trailing" secondItem="WsU-sg-xxg" secondAttribute="trailing" constant="17" id="wtK-CB-s0N"/>
+                            <constraint firstItem="wsI-c5-6dj" firstAttribute="top" secondItem="WsU-sg-xxg" secondAttribute="bottom" constant="8" id="xsy-ta-9It"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Vca-3B-E0P"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Sobre" id="lXg-s3-cR0">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="qUm-lP-guX"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ep5-Tf-S60" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2453.6231884057975" y="66.964285714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="mom" width="842" height="782"/>
+    </resources>
 </document>
